Ibrahim DEV/src/objects/candidat__c.object
<CustomObject>
    <fields>
        <fullName>Candidat_collaborateur__c</fullName>
        <label>Collaborateur</label>
        <referenceTo>Collaborateur__c</referenceTo>
        <relationshipLabel>candidats</relationshipLabel>
        <relationshipName>candidats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Motivations__c</fullName>
        <label>Motivations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <label>Statut</label>
        <picklist>
            <picklistValues>
                <fullName>00 - Postulant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01 - Réf Critères</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 - Accepté critères</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 - Réf Recruteur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.1 - CV Pré-Validé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.2 - Demande Validation Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 - CV Validé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.3 - Appel sans réponse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 - Refusé suite entretien Téléphonique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05.1 - Refusé Appel sans réponse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 - Attente rép covoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 - Convoqué Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 - Non retenu Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - Validé Recruteur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - En attente RDV DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - Refusé DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 - Pool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.1 Assesment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 - Retenue DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 - Désistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 - Embauché</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.4 - Vivier CV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.1 - Candidat Interne</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>mobile__c</fullName>
        <label>mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>nom__c</fullName>
        <description>Le nom de condidat</description>
        <label>nom</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prenom__c</fullName>
        <description>le prénom de candidat</description>
        <label>prenom</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recrutement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>recrutement</label>
        <referenceTo>recrutement__c</referenceTo>
        <relationshipLabel>candidats</relationshipLabel>
        <relationshipName>candidats</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>candidat</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Nom de candidat</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>candidats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>